# rust-semver-sort

./: Cargo.toml  README.md
src/: lib.rs  semver.rs
tests/: semver_test.rs
