[package]
name = "semver_sort"
version = "0.2.0"
description = "Sorts semver strings or numbers"
repository = "https://github.com/ragingwind/rust-semver-sort"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
